--- a/notas/notas.tex
+++ b/notas/notas.tex
@@ -37,11 +37,16 @@ Os modelos de regressão incluem as seguintes etapas:
   \item Critica ao modelo.
 \end{enumerate}
 
-\section*{Correlação}
+\section*{Pressupostos}
 
 \url{https://sphweb.bumc.bu.edu/otlt/MPH-Modules/BS/R/R5_Correlation-Regression/R5_Correlation-Regression4.html}
 
-
+\begin{enumerate}
+  \item Linearidade: a relação entre $X$ e $E[Y]$ É É linear;
+  \item Independência: cada observação é independente das outras;
+  \item Homocedasticidade: a variância de $E[Y]$ é constante;
+  \item Normalidade: $Y$ é normalmente distribuída para qualquer X;
+\end{enumerate}
 
 
 
